Fix bug with sidebar background not expanding to fill space (#865)
* fix bug with sidebar background not expanding to fill space

* fixed weird scrollbar color

---------

--- a/apps/frontend/src/app/GradTrak/Dashboard/Dashboard.module.scss
+++ b/apps/frontend/src/app/GradTrak/Dashboard/Dashboard.module.scss
@@ -32,7 +32,6 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
-    scrollbar-color: var(--paragraph-color) var(--border-color, rgba(0, 0, 0, 0.10));
     width: 27%;
     }
 
